# store_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  lint.yml  pylint.yml
config/: config.toml  prod_config.toml
config_dist/: config.yml
src/: __main__.py
src/api/: __init__.py
src/api/routes/: order.py
src/application/common/: command.py  dto.py  exceptions.py  query.py
src/application/common/config/: __init__.py
src/application/common/interfaces/: uow.py
src/application/order/enums/: __init__.py  order_status.py
src/application/product/: exceptions.py
src/application/product/commands/: __init__.py  create_product.py
src/application/product/dto/: __init__.py  products.py
src/application/product/interfaces/: __init__.py
src/application/product/queries/: __init__.py  get_products.py
src/common/config/parser/: config_reader.py  main.py
src/core/models/enums/: order_status.py
src/domain/common/entities/: aggregate_root.py
src/domain/common/events/: event.py
src/domain/common/exceptions/: __init__.py  base.py
src/domain/common/value_objects/: base.py
src/domain/product/: exceptions.py
src/domain/product/entities/: __init__.py  product.py
src/domain/product/events/: __init__.py  product_created.py
src/domain/product/value_objects/: __init__.py  price.py  product_id.py  product_property.py  title.py  weight.py
src/infrastructure/: config_loader.py  uow.py
src/infrastructure/db/: __init__.py  config.py  converters.py  exception_mapper.py  main.py  uow.py
src/infrastructure/db/migrations/: env.py  script.py.mako
src/infrastructure/db/models/: __init__.py  base.py  order.py  product.py
src/infrastructure/db/repositories/: __init__.py  product.py
src/infrastructure/di/: __init__.py  db.py  main.py  product.py
src/infrastructure/di/factories/: __init__.py  db.py  mediator.py  message_bus.py
src/infrastructure/di/providers/: __init__.py  db.py  (+8 more)
src/infrastructure/event_bus/: exchanges.py
src/infrastructure/log/: __init__.py  config.py  main.py
src/infrastructure/mediator/: __init__.py  main.py
src/infrastructure/message_broker/: __init__.py  config.py  factories.py  interface.py  main.py  message.py  message_broker.py  uow.py
src/presentation/api/: __init__.py  __main__.py  config.py  main.py
src/presentation/di/: main.py
tests/: conftest.py  test_load_config.py
tests/config/: test_config.yml
tests/db/: test_db_connection.py
tests/integration/: conftest.py  test_healthcheck.py  test_product.py
tests/integration/api/: conftest.py  test_products.py
tests/mocks/: __init__.py  event_mediator.py  product_repo.py  uow.py
tests/unit/: conftest.py
tests/utils/: di.py  init_db.py
tests/utils/config/: test_config.toml  test_config.yml
(+39 files in other folders)
