[tool.poetry]
name = "store-project"
version = "0.1.0"
description = "Simple Store project with order"
authors = ["edpyt <edrsa1321s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pyyaml = "^6.0.1"
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.1"
litestar = "^2.5.4"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.3"
pytest = "^7.4.4"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = ['migrations']