[tool.poetry]
name = "store-project"
version = "0.1.0"
description = "Simple Store project with order"
authors = ["edpyt <edrsa1321s@gmail.com>"]
readme = "README.md"
packages = [ {include = "src"} ]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pyyaml = "^6.0.1"
litestar = "^2.5.4"
uvicorn = "^0.27.0.post1"
didiator = {extras = ["di"], version = "^0.3.1"}
aio-pika = "^9.4.0"
structlog = "^24.1.0"
orjson = "^3.9.15"
dishka = "^0.5.0"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.3"
pytest = "^7.4.4"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
types-pyyaml = "^6.0.12.12"
flake8-aaa = "^0.17.0"

[tool.poetry.group.migration.dependencies]
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint]
fixable = ["ALL"]
exclude = ["migrations", ".git", ".github", ".venv", "__pycache__",]
ignore = [
    "PT023",
    "PLR2004",
    "S101",
    "S104",
    "FIX002",
    "B024",
    "TD002",
    "TD003",
    "EM",
    "FBT",
    "TRY003",
    "D1",
    "FA",
    "ANN101",
    "PGH003",
    "TCH",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
